--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": [
+      "./node_modules/user-agent-data-types",
+      "./node_modules/@types/google.maps"
+    ]
   },
-
   "references": [
     {
       "path": "./tsconfig.config.json"
