--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
+    "@types/google.maps": "^3.50.0",
     "@types/node": "^16.11.41",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
@@ -28,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "typescript": "~4.7.4",
+    "user-agent-data-types": "^0.3.0",
     "vite": "^2.9.12",
     "vue-tsc": "^0.38.1"
   }
